// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
[
  [
    "main.js",
    1843,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 1843,
    },
  ],
  [
    "main.js.gz",
    584,
    {
      "compressed": true,
      "size": 584,
    },
  ],
  [
    "newFile.js",
    23,
    {
      "related": {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  [
    "newFile.js.gz",
    43,
    {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    16036,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16036,
    },
  ],
  [
    "main.js.gz",
    3943,
    {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    16036,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16036,
    },
  ],
  [
    "main.js.gz",
    3943,
    {
      "compressed": true,
      "size": 3943,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.cd3aed5809a2faa4eb5a.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.997e03f80180ff3efac8.js",
    16123,
    {
      "contenthash": "997e03f80180ff3efac8",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.997e03f80180ff3efac8.js.gz",
      },
      "size": 16123,
    },
  ],
  [
    "main.997e03f80180ff3efac8.js.gz",
    4026,
    {
      "compressed": true,
      "immutable": true,
      "size": 4026,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16092,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16092,
    },
  ],
  [
    "main.js.gz",
    4006,
    {
      "compressed": true,
      "size": 4006,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    16020,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16020,
    },
  ],
  [
    "main.js.gz",
    3939,
    {
      "compressed": true,
      "size": 3939,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "icon.png",
    94117,
    {
      "related": {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.png.gz",
    73309,
    {
      "compressed": true,
      "size": 73309,
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "main.js",
    16020,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16020,
    },
  ],
  [
    "main.js.gz",
    3939,
    {
      "compressed": true,
      "size": 3939,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16076,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16076,
    },
  ],
  [
    "main.js.gz",
    4002,
    {
      "compressed": true,
      "size": 4002,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16113,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16113,
    },
  ],
  [
    "main.js.gz",
    4026,
    {
      "compressed": true,
      "size": 4026,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16076,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16076,
    },
  ],
  [
    "main.js.br",
    3493,
    {
      "compressed": true,
      "size": 3493,
    },
  ],
  [
    "main.js.custom",
    16076,
    {
      "compressed": true,
      "size": 16076,
    },
  ],
  [
    "main.js.gz",
    4002,
    {
      "compressed": true,
      "size": 4002,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16076,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16076,
    },
  ],
  [
    "main.js.br",
    3493,
    {
      "compressed": true,
      "size": 3493,
    },
  ],
  [
    "main.js.custom",
    16076,
    {
      "compressed": true,
      "size": 16076,
    },
  ],
  [
    "main.js.gz",
    4002,
    {
      "compressed": true,
      "size": 4002,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16076,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16076,
    },
  ],
  [
    "main.js.gz",
    4002,
    {
      "compressed": true,
      "size": 4002,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "main.js",
    16076,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16076,
    },
  ],
  [
    "main.js.gz",
    4002,
    {
      "compressed": true,
      "size": 4002,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.11c0901cd673d3552004.js",
    16123,
    {
      "chunkhash": "11c0901cd673d3552004",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.11c0901cd673d3552004.js.gz",
      },
      "size": 16123,
    },
  ],
  [
    "main.11c0901cd673d3552004.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.11c0901cd673d3552004.js",
    16123,
    {
      "chunkhash": "11c0901cd673d3552004",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.11c0901cd673d3552004.js.gz",
      },
      "size": 16123,
    },
  ],
  [
    "main.11c0901cd673d3552004.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `[]`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=4a7ba0c6d4e9e8a40b1d",
    194,
    {
      "fullhash": "4a7ba0c6d4e9e8a40b1d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4049,
    {
      "compressed": true,
      "immutable": true,
      "size": 4049,
    },
  ],
  [
    "main.js?var=4a7ba0c6d4e9e8a40b1d",
    16281,
    {
      "fullhash": "4a7ba0c6d4e9e8a40b1d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16281,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `[]`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.11c0901cd673d3552004.js",
    16123,
    {
      "chunkhash": "11c0901cd673d3552004",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.11c0901cd673d3552004.js.gz",
      },
      "size": 16123,
    },
  ],
  [
    "main.11c0901cd673d3552004.js.gz",
    4028,
    {
      "compressed": true,
      "immutable": true,
      "size": 4028,
    },
  ],
  [
    "stats.json",
    155,
    {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=2b24ea86b41464a076e6",
    194,
    {
      "fullhash": "2b24ea86b41464a076e6",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4085,
    {
      "compressed": true,
      "immutable": true,
      "size": 4085,
    },
  ],
  [
    "main.js.map.gz",
    4161,
    {
      "compressed": true,
      "size": 4161,
    },
  ],
  [
    "main.js.map?var=2b24ea86b41464a076e6",
    13249,
    {
      "development": true,
      "related": {
        "gzipped": "main.js.map.gz",
      },
      "size": 13249,
    },
  ],
  [
    "main.js?var=2b24ea86b41464a076e6",
    16342,
    {
      "fullhash": "2b24ea86b41464a076e6",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=2b24ea86b41464a076e6",
      },
      "size": 16342,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "async.async.js.compress",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.custom?foo=bar#hash",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=e3505a1ac03af418b2b6",
    194,
    {
      "fullhash": "e3505a1ac03af418b2b6",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.br",
    3538,
    {
      "compressed": true,
      "immutable": true,
      "size": 3538,
    },
  ],
  [
    "main.js.compress",
    16284,
    {
      "compressed": true,
      "immutable": true,
      "size": 16284,
    },
  ],
  [
    "main.js.custom?foo=bar#hash",
    16284,
    {
      "compressed": true,
      "immutable": true,
      "size": 16284,
    },
  ],
  [
    "main.js.gz",
    4053,
    {
      "compressed": true,
      "immutable": true,
      "size": 4053,
    },
  ],
  [
    "main.js?var=e3505a1ac03af418b2b6",
    16284,
    {
      "fullhash": "e3505a1ac03af418b2b6",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16284,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=e3505a1ac03af418b2b6",
    194,
    {
      "fullhash": "e3505a1ac03af418b2b6",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4053,
    {
      "compressed": true,
      "immutable": true,
      "size": 4053,
    },
  ],
  [
    "main.js?var=e3505a1ac03af418b2b6",
    16284,
    {
      "fullhash": "e3505a1ac03af418b2b6",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16284,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `[]`;

exports[`CompressionPlugin should work: warnings 1`] = `[]`;
